--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^5.1.1"
+djangorestframework = "^3.15.2"
+pillow = "^10.4.0"
 
 
 [build-system]
